# project-management-system

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: main.rs
api/src/board/: routes.rs
api/src/user/: routes.rs
background_jobs/: Cargo.toml
background_jobs/src/: lib.rs
background_jobs/src/email_worker/: email_worker.rs
cache/: Cargo.toml
cache/src/redis/: redis.rs
commands/: Cargo.toml
commands/src/: lib.rs
commands/src/command_handlers/: mod.rs
commands/src/command_handlers/board_command_handlers/: insert_board_command_handler.rs  insert_card_to_board_command_handler.rs  mod.rs
commands/src/command_handlers/card_command_handlers/: insert_card_command_handler.rs  insert_task_to_card_command_handler.rs  mod.rs  move_task_to_another_card_command_handler.rs  update_card_command_handler.rs
commands/src/command_handlers/task_command_handlers/: assign_task_to_user_command_handler.rs  delete_assigned_user_from_task_command_handler.rs  delete_task_command_handler.rs  insert_task_command_handler.rs  mod.rs  update_task_command_handler.rs
commands/src/command_handlers/user_command_handlers/: check_and_apply_invite_command_handler.rs  insert_board_to_user_command_handler.rs  insert_user_command_handler.rs  mod.rs  update_user_command_handler.rs  validate_user_command_handler.rs
commands/src/commands/: mod.rs
commands/src/commands/board_commands/: mod.rs  (+3 more)
commands/src/factory/: board_command_handler_factory.rs  card_command_hander_factory.rs  mod.rs  task_command_handler_factory.rs  user_command_handler_factory.rs
data-access/: .gitignore  Cargo.toml
data-access/src/: lib.rs
data-access/src/database/: database_connection.rs
data-access/src/generic_repository/: generic_repository.rs  mod.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/aggregates/: board_aggregate.rs  board_user_aggregate.rs  card_task_aggregate.rs  mod.rs
domain/src/board/: board.rs  board_get_with_id.rs  board_status.rs  board_users_aggregate.rs  insert_card_to_board.rs  insertable_board.rs  mod.rs
domain/src/card/: card.rs  card_status.rs  insert_card.rs  insert_task_to_card.rs  mod.rs  move_task_to_another_card.rs  update_card.rs
domain/src/command/: command.rs
domain/src/common/: claims.rs  command_response.rs  command_type.rs  common_response.rs  found_type.rs  invite_user_claims.rs  mod.rs  not_found.rs
domain/src/database/: database_exceptions.rs  mod.rs
domain/src/email/: email.rs
domain/src/query/: query.rs
domain/src/task/: assign_task_to_user.rs  delete_assigned_user_from_task.rs  delete_task.rs  mod.rs  task.rs  task_status.rs  update_task.rs
domain/src/user/: get_by_email.rs  insert_board_to_user.rs  invite_user_response.rs  invite_user_to_board.rs  login_response.rs  login_user.rs  mod.rs  register.rs  update_user.rs  user.rs  user_get_by_id.rs  validate_user.rs
helpers/: Cargo.toml
helpers/src/: lib.rs  token_decoder.rs
messaging/: Cargo.toml
messaging/src/email/: email.rs
middlewares/: Cargo.toml
middlewares/src/auth/: auth.rs
queries/: Cargo.toml
queries/src/: lib.rs
queries/src/factory/: board_query_handler_factory.rs  mod.rs  user_query_handler_factory.rs
queries/src/queries/: mod.rs
queries/src/queries/board_queries/: get_all_board_query.rs  get_board_users_query.rs  get_boards_as_aggregate_query.rs  mod.rs
queries/src/queries/user_queries/: check_user_board_query.rs  get_user_boards_aggregate_query.rs  mod.rs  user_get_by_email_query.rs  user_get_by_id_query.rs
queries/src/query_handlers/: mod.rs
queries/src/query_handlers/board_query_handlers/: get_all_board_query_handler.rs  get_board_as_aggregate_query_handler.rs  get_board_users_query_handler.rs  mod.rs
queries/src/query_handlers/user_query_handlers/: check_user_board_query_handler.rs  get_user_boards_aggregate_query_handler.rs  mod.rs  user_get_by_email_query_handler.rs  user_get_by_id_query_handler.rs
scripts/: set_system_enviroments.ps1
services/: Cargo.toml
services/src/: lib.rs
services/src/board_services/: board.rs
services/src/card_services/: card.rs
services/src/task_services/: task.rs
services/src/user_services/: user.rs
(+16 files in other folders)
