[package]
name = "api"
version = "0.1.0"
authors = ["emreyalvac <emre.yalvac@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = {path = "./../domain"}
background_jobs = {path = "./../background_jobs"}
cache = {path = "./../cache"}
actix-rt = "1.1.1"
actix-web = "3.0.0-alpha.3"
services = {path = "./../services"}
futures = "0.3.5"
