[package]
name = "background_jobs"
version = "0.1.0"
authors = ["emreyalvac <emre.yalvac@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cache = {path = "./../cache"}
async-trait = "0.1.33"
redis = "0.16.0"
serde_json = "1.0.53"
serde = "1.0.111"
domain = {path = "./../domain"}
messaging = { path = "./../messaging"}
