[package]
name = "data-access"
version = "0.1.0"
authors = ["emreyalvac <emre.yalvac@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = {path = "./../domain"}
futures = "0.3.5"
mongodb = "0.10.0"
bson = "0.14.1"
async-trait = "0.1.35"
serde = "1.0.111"
