[package]
name = "domain"
version = "0.1.0"
authors = ["emreyalvac <emre.yalvac@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.111"
async-trait = "0.1.35"
uuid = { version = "0.8", features = ["serde", "v4"] }
bson = "1.0.0"
