[package]
name = "queries"
version = "0.1.0"
authors = ["emreyalvac <emre.yalvac@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = {path = "./../domain"}
async-trait = "0.1.35"
data-access = {path = "./../data-access"}
bson = "1.0.0"

[dependencies.mongodb]
version = "1.0.0"
default-features = false
features = ["async-std-runtime"]
