[package]
name = "services"
version = "0.1.0"
authors = ["emreyalvac <emre.yalvac@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queries = {path = "./../queries"}
commands = {path = "./../commands"}
domain = {path = "./../domain"}
async-trait = "0.1.33"
slugify = "0.1.0"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
jsonwebtoken = "7.1.1"
rust-crypto = "0.2.36"
chrono  = "0.4.11"

[dependencies.mongodb]
version = "1.0.0"
default-features = false
features = ["async-std-runtime"]
